# teikitu_release

./: .gitattributes  .gitignore  CMakeLists.txt  Coding Conventions.md  LICENSE  README.md  cmakelists.txt  teikitu.md
teikitu/prj/: CMakeLists.txt  WorkspaceSettings.xcsettings  bootstrap_cmakelists.txt  build.instructions  cmake_config.cmake  cmake_solution_name.cmake  flag_overrides.cmake  git_add.ps1  make_windows.ps1  powershell_functions.ps1  project_report.cmake  test_windows.ps1  windows_terminal_build_cmake_command.ps1
teikitu/src/TgS COLLISION/: CMakeLists.txt  TgS Collision - Axis Projection.c  TgS Collision - Box AA-Box AA.c  TgS Collision - Box AA-Linear.c  TgS Collision - Box AA-Plane.c  TgS Collision - Box AA-Sphere.c  TgS Collision - Box [Axis Separation].c  TgS Collision - Box-Box.c  TgS Collision - Box-Linear.c  TgS Collision - Box-Plane.c  TgS Collision - Box-Point.c  TgS Collision - Box-Sphere.c  TgS Collision - Box-Triangle.c  TgS Collision - Capsule-Capsule.c  TgS Collision - Capsule-Linear.c  TgS Collision - Capsule-Plane.c  TgS Collision - Capsule-Point.c  TgS Collision - Capsule-Sphere.c  TgS Collision - Capsule-Triangle.c  TgS Collision - Circle-Circle.c  TgS Collision - Circle-Linear.c  TgS Collision - Circle-Point.c  TgS Collision - Circle-Triangle.c  TgS Collision - Clip [Template].c  TgS Collision - Convex-Box.c  TgS Collision - Convex-Capsule.c  TgS Collision - Convex-Cylinder.c  TgS Collision - Convex-Plane.c  TgS Collision - Convex-Sphere.c  TgS Collision - Convex-Triangle.c  TgS Collision - Cylinder-Box.c  TgS Collision - Cylinder-Capsule.c  TgS Collision - Cylinder-Cylinder.c  TgS Collision - Cylinder-Linear.c  TgS Collision - Cylinder-Plane.c  TgS Collision - Cylinder-Sphere.c  TgS Collision - Cylinder-Triangle.c  TgS Collision - Ellipse-Ellipse.c  TgS Collision - Internal.h  TgS Collision - Linear-Linear.c  (+29 more)
teikitu/src/TgS COMMON/: CMakeLists.txt  TgS (CLANG) Common - Base - API.c  TgS (MSVC) Common - Base - API.c  TgS (POSIX) Common - Base - API [Thread].c  TgS (POSIX) Common - Base - API.c  TgS (POSIX) Common - Console.c  TgS (POSIX) Common - Global.c  TgS (POSIX) Common - Internal.h  TgS (POSIX) Common - Mem MGR.c  TgS (POSIX) Common - STg1_MT_MX.c  TgS (POSIX) Common - STg1_MT_SM.c  TgS (POSIX) Common [PCH].c  TgS (UWP) Common - Base - API [Universal].cpp  TgS (UWP) Common - Global.cpp  TgS (WIN) Common - Base - API [Thread].c  TgS (WIN) Common - Base - API.c  TgS (WIN) Common - Console.c  TgS (WIN) Common - Global - Data.h  TgS (WIN) Common - Global.c  TgS (WIN) Common - Internal - Type.h  TgS (WIN) Common - Internal.h  TgS (WIN) Common - Link Test.c  TgS (WIN) Common - Mem MGR.c  TgS (WIN) Common - STg1_MT_MX.c  TgS (WIN) Common - STg1_MT_SM.c  TgS (WIN) Common - SysInfo.c  TgS (WIN) Common [PCH].c  TgS (WIN) Common [Static].cpp  TgS Common - Base - API [Math].c  TgS Common - Base - API [Text].c  TgS Common - Base - API.c  TgS Common - Base - Data.c  TgS Common - Base - Type [Constants].c  TgS Common - Base - Type [File] [Data].c  TgS Common - Base - Type [File].c  TgS Common - Base - Type [IO].c  TgS Common - Console - Internal.h  TgS Common - Console [Var].c  TgS Common - Console.c  TgS Common - Console.inl  (+31 more)
teikitu/src/TgS EFFECT/: CMakeLists.txt  TgS (POSIX) Effect - Internal.h  TgS (WIN) Effect - Internal.h  TgS Effect - AnimData.c  TgS Effect - Beam - Render.c  TgS Effect - Beam - Scene.c  TgS Effect - Beam - Update.c  TgS Effect - Billboard - Render.c  TgS Effect - Billboard - Scene.c  TgS Effect - Billboard - Update.c  TgS Effect - Client - Effect.c  TgS Effect - Data.c  TgS Effect - Debug.c  TgS Effect - Decal - Render.c  TgS Effect - Decal - Scene.c  TgS Effect - Decal - Update.c  TgS Effect - Emitter - Render.c  TgS Effect - Emitter - Scene.c  TgS Effect - Emitter - Update - Particle.c  TgS Effect - Emitter - Update.c  TgS Effect - File.c  TgS Effect - GIB - Render.c  TgS Effect - GIB - Scene.c  TgS Effect - GIB - Update.c  TgS Effect - Glass - Render.c  TgS Effect - Glass - Scene.c  TgS Effect - Glass - Update.c  TgS Effect - Group - Update.c  TgS Effect - Internal - Constants.h  TgS Effect - Internal - Data.h  TgS Effect - Internal - Type.h  TgS Effect - Internal.h  TgS Effect - Internal.inl  TgS Effect - Light - Scene.c  TgS Effect - Light - Update.c  TgS Effect - Liquid - Render.c  TgS Effect - Liquid - Scene.c  TgS Effect - Liquid - Update.c  TgS Effect - Module.c  TgS Effect - Post - Scene.c  (+12 more)
teikitu/src/TgS INPUT/: CMakeLists.txt  TgS (WIN) Input - Data.c  TgS (WIN) Input - Fcn Bind.cpp  TgS (WIN) Input - GUI Keyboard.c  TgS (WIN) Input - GUI Mouse.c  TgS (WIN) Input - Internal - Data.h  TgS (WIN) Input - Internal with Windows.h  TgS (WIN) Input - Internal.h  TgS (WIN) Input - Keyboard.c  TgS (WIN) Input - Module.c  TgS (WIN) Input - Mouse.c  TgS (WIN) Input [PCH].c  TgS (WIN) Input [PCH].cpp  TgS (XINPUT) Input - GamePad.cpp  TgS Input - Data.c  TgS Input - Internal - Data.h  TgS Input - Internal - Type.h  TgS Input - Internal.h  TgS Input - Module.c  TgS Input - System.c  TgS Input [PCH].c
teikitu/src/TgS KERNEL/: CMakeLists.txt  Standard_Debug_Common.hlsli  Standard_Debug_Geom_00_PS_P.vs.hlsl  Standard_Debug_Geom_00_PS_P_vs.hlsl.h  Standard_Debug_Geom_01_PS_PC_vs.hlsl.h  Standard_Debug_Geom_02I_PS_PNC_vs.hlsl.h  Standard_Debug_Geom_02_PS_PNC_vs.hlsl.h  Standard_Debug_Geom_03_PS_PNC.vs.hlsl  Standard_Debug_Geom_03_PS_PNC_vs.hlsl.h  Standard_Debug_Line_PS_PC.vs.hlsl  Standard_Debug_Line_PS_PC_vs.hlsl.h  Standard_Debug_PC.ps.hlsl  Standard_Debug_PCG.ps.hlsl  Standard_Debug_PCG_ps.hlsl.h  Standard_Debug_PC_ps.hlsl.h  Standard_Debug_PN.ps.hlsl  Standard_Debug_PNC_ps.hlsl.h  Standard_Debug_PN_ps.hlsl.h  Standard_Debug_P_ps.hlsl.h  Standard_Debug_UIG_ps.hlsl.h  Standard_Debug_UIT.ps.hlsl  Standard_Debug_UIT_ps.hlsl.h  Standard_Debug_UI_PS_UI.vs.hlsl  Standard_Debug_UI_PS_UI_vs.hlsl.h  Standard_Debug_UI_Text_PS_UIT_vs.hlsl.h  Standard_Debug_UI_ps.hlsl.h  Standard_FX.ps.hlsl  Standard_FX_ps.hlsl.h  Standard_Particle_00_PS_FX_vs.hlsl.h  Standard_Particle_01_PS_FX.vs.hlsl  (+82 more)
teikitu_private/: CMakeLists.txt
(+1716 files in other folders)
